test-suite/typecheck/pass/method_call_option_map.first
import * "Prelude"
interface Functor<F<_>> {
  map: forall A B. function(F<A>, function(A) -> B) -> F<B>;
}
function optionMap<A, B>(o: Option<A>, f: function(A) -> B) -> Option<B> {
  return match o { Some(x) => some(f(x)), None => none() };
}
implementation Functor<Option> { map = optionMap; }
interaction main() -> Unit {
  let o: Option<Int> = some(7);
  let m: Option<Int> = o.map(function(n: Int) -> Int { return n * 2; });
  return;
}
