test-suite/typecheck/fail/record_field_type_mismatch.first
type P = { x: Int, y: Int };
interaction main() -> Unit {
  let p: P = { x: 1, y: "bad" };
  return;
}
